syntax = "proto3";

package quintet.rpc;

message PbExternalMessage {
  string opName = 1;
  string args = 2;
//   string callerId = 3;
}

message PbExternalReply {
  string LeaderId = 1; // Null if the server itself is the leader
  string ret = 2;
}

service External {
  rpc call (PbExternalMessage) returns (PbExternalReply) {}
}

